--- a/lessons/lesson1/phase1.html
+++ b/lessons/lesson1/phase1.html
@@ -140,6 +140,11 @@
       // ...add more as needed
     ];
 
+    // 2) Define 10 five-digit numbers
+   
+    const secretCodes1 = ["87942502","62635884","11947529","93306487","34281792","55018985","86553110","63281850","58250142","28253650","32688753","81413168","69693024","46262421","34745760","76109111","58173053","38384013","75674042","43033625","30362740","50890477","23450049","63419632","57600596","17600020","86227575","71607160","30107910","82193187","43794080","72029679","54701089","37692103","73400219","48566719","28248659","29966403","17674226","54060121","79597735","39348606","14317876","61927490","46246394","30867853","62070844","90031898","18101981","12353037","35575470","63121941","60228514","79497425","63554829","61610523","82213417","34772654","38575797","90822198","48972716","84568349","41877590","56712532","55044788","10217961","51950984","62511322","44316246","30089912","43299689","98135486","26413364","87276993","38725705","99240870","57906608","84008240","50247700","79295850","30511317","57803123","75352291","57786622","73230500","71307940","83027513","32508860","12580113","23824657","48237933","23719507","18932461","24911796","41666860","14477206","37513582","81801821","28992317","49546508","22656624","15105924","23042981","34909938","87098078","42869864","36847428","12303557","67576953","17645655","16714946","98588381","18218837","59138837","37172743","66843141","88990587","55631480","14231822","60627737","42370338","55144971","55911344","10616435","22104894","10595739","94123273","37689923","21491695","89085707","43394220","44035588","49105139","20451227","66146634","13346807","58316591","77775687","46314663","67511715","90868150","76229689","47559608","53094092","13446698","62943692","60629515","34975940","98593305","82391499","87027437","21815088","67798793","64615096","62800434","33339524","51152777","17961179","71107306","90280302","22124050","68104052","83217509","12051508","91643613","60234521","34438263","21952547","19835324","25017525","31005877","44488944","28282744","46616024","86361569","26504350","66360883","30824165","46683617","43370343","12639133","70579813","49617971","52622900","71386089","43429061","75322421","92334838","67436284","98233833","49945001","26086855","90069058","58598209","63727603","35485848","14666093","84116960","36198176","66706227"]
+    codes = secretCodes1;
+
     // DOM elements
     const targetWordElem = document.getElementById("target-word");
     const userInputElem = document.getElementById("user-input");
@@ -280,8 +285,12 @@
       userInputElem.disabled = true;
       startButton.disabled = false;
 
-      targetWordElem.textContent = "All words completed!";
-      feedbackElem.textContent = "Well done! You finished on time!";
+      // Pick a random code
+      const randomCode = codes[Math.floor(Math.random() * codes.length)];
+
+      // Show success message in English
+      targetWordElem.textContent = "Congratulations! You've completed the game!";
+      feedbackElem.textContent = `Your code is: ${randomCode}`;
       feedbackElem.className = "correct";
     }
 
@@ -297,8 +306,12 @@
       // Check if user completed all words in time
       if (currentIndex >= vocabList.length) {
         // All words completed before or exactly at time limit
-        targetWordElem.textContent = "All words completed!";
-        feedbackElem.textContent = "Well done! You finished on time!";
+
+        // Pick a random code
+        const randomCode = codes[Math.floor(Math.random() * codes.length)];
+
+        targetWordElem.textContent = "Congratulations! You've completed the game!";
+        feedbackElem.textContent = `Your code is: ${randomCode}`;
         feedbackElem.className = "correct";
       } else {
         // User did not complete all words in time
