--- a/lessons/lesson1/phase2.html
+++ b/lessons/lesson1/phase2.html
@@ -140,6 +140,12 @@
       // ...add more as needed
     ];
 
+    // 2) Define 10 five-digit numbers
+
+    const secretCodes2 = ["13806963","90365823","80631873","76788537","41410855","42742382","53812906","13440539","95074939","16962434","39339230","70634259","90748561","35649203","20439482","44494930","93650936","30758766","86775708","30150270","94215743","53894177","37773290","17284892","52696028","98122171","77663335","58613370","96835867","44006027","82528761","78132229","17231404","54155972","97610581","78958994","21461884","45963045","62368750","78377088","74209686","97248149","59996520","74712803","45869222","74985664","59176297","65972219","84057449","65535656","15601578","26123983","45934014","77325691","38995612","66613257","49996020","77584974","10887407","64782378","23493631","99556642","78226374","61592779","72697940","88585626","93668286","81041878","44956372","99732351","37844621","56777853","35492262","20970990","20020740","67677519","81331064","79244787","73647356","24424492","54981392","68496930","35379400","23153625","41517479","21255067","62206430","29538626","34100484","99804715","92026135","19320388","96355460","78796058","71519062","20565707","62318510","59353946","49195023","54305051","62617229","90447126","44506799","20132605","37014590","18766163","72242315","22634399","24466111","64086917","74083160","68463272","66567758","93998339","81136200","15343658","35321981","11740240","53814555","47337238","59909693","15174932","69236499","96030124","40246551","89183306","27819327","37302283","97575992","37788009","76419048","54127393","51694882","92671231","22595225","95636729","98879917","68255292","81654768","96097528","29417287","49273285","78850708","42049327","35030114","42637655","42535968","74348805","85065279","41140543","14476016","81850591","76049098","85828389","45296219","95512010","19536168","42441168","22707077","51869129","22910406","89058856","94993437","40940673","54711529","95746577","63641900","53019737","39115698","83200611","40943623","22008297","36731836","31479219","12988818","32832755","72080672","80950133","93448204","14635752","29604584","24713095","51945576","77556713","32804099","79033592","52656906","61293846","74507475","83101367","59534750","65886883","64660090","40107754","60536770","27617519","74356457","89860199","28024833","29231771"]
+
+    codes = secretCodes2;
+
     // DOM elements
     const targetWordElem = document.getElementById("target-word");
     const userInputElem = document.getElementById("user-input");
@@ -281,8 +287,11 @@
       userInputElem.disabled = true;
       startButton.disabled = false;
 
-      targetWordElem.textContent = "All words completed!";
-      feedbackElem.textContent = "Well done! You finished on time!";
+      // Randomly pick a code from the 10 defined codes
+      const randomCode = codes[Math.floor(Math.random() * codes.length)];
+
+      targetWordElem.textContent = "Congratulations! You've completed the game!";
+      feedbackElem.textContent = `Your code is: ${randomCode}`;
       feedbackElem.className = "correct";
     }
 
@@ -294,11 +303,13 @@
 
       if (currentIndex >= vocabList.length) {
         // All words completed before or right at the time limit
-        targetWordElem.textContent = "All words completed!";
-        feedbackElem.textContent = "Well done! You finished on time!";
+        const randomCode = codes[Math.floor(Math.random() * codes.length)];
+
+        targetWordElem.textContent = "Congratulations! You've completed the game!";
+        feedbackElem.textContent = `Your code is: ${randomCode}`;
         feedbackElem.className = "correct";
       } else {
-        // Some words not completed
+        // Not completed in time
         targetWordElem.textContent = "Time’s up!";
         feedbackElem.textContent = "You’ve gone over the time. Please try again.";
         feedbackElem.className = "wrong";
