--- a/lessons/lesson1/phase1.html
+++ b/lessons/lesson1/phase1.html
@@ -129,16 +129,96 @@
     // 1) Define your Korean–English vocabulary list
     // This example has multiple possible English answers for each Korean word.
     const vocabList = [
-      {
-        korean: "사과",
-        english: ["apple", "apology"] // two English words for one Korean word
-      },
-      {
-        korean: "책",
-        english: ["book", "volume"]   // example of multiple meanings
-      }
-      // ...add more as needed
-    ];
+  {
+    korean: "가운데",
+    english: ["the middle", "the center"]
+  },
+  {
+    korean: "건너편",
+    english: ["the other side"]
+  },
+  {
+    korean: "경복궁",
+    english: ["Gyungbok Palace"]
+  },
+  {
+    korean: "광화문",
+    english: ["Gwanghwamun"]
+  },
+  {
+    korean: "교회",
+    english: ["church"]
+  },
+  {
+    korean: "꽃집",
+    english: ["flower shop"]
+  },
+  {
+    korean: "동네",
+    english: ["neighborhood"]
+  },
+  {
+    korean: "서울",
+    english: ["Seoul"]
+  },
+  {
+    korean: "슈퍼",
+    english: ["supermarket"]
+  },
+  {
+    korean: "약국",
+    english: ["pharmacy", "drugstore"]
+  },
+  {
+    korean: "지도",
+    english: ["map"]
+  },
+  {
+    korean: "쪽",
+    english: ["side", "direction"]
+  },
+  {
+    korean: "초등학교",
+    english: ["elementary school"]
+  },
+  {
+    korean: "여기",
+    english: ["here"]
+  },
+  {
+    korean: "거기",
+    english: ["there"]
+  },
+  {
+    korean: "저기",
+    english: ["over there"]
+  },
+  {
+    korean: "내리다",
+    english: ["to get off"]
+  },
+  {
+    korean: "타다",
+    english: ["to get in/on", "ride"]
+  },
+  {
+    korean: "깨끗하다",
+    english: ["to be clean"]
+  },
+  {
+    korean: "따뜻하다",
+    english: ["to be warm"]
+  },
+  {
+    korean: "조용하다",
+    english: ["to be quiet"]
+  },
+  {
+    korean: "여러",
+    english: ["many", "several"]
+  }
+];
+
 
     // 2) Define 10 five-digit numbers
    
