--- a/lessons/index.html
+++ b/lessons/index.html
@@ -62,8 +62,9 @@
   <div class="container">
     <h1>Lessons</h1>
     <ul>
-      <li><a href="lesson1/index.html">Lesson 1</a></li>
-      <li><a href="lesson2/index.html">Lesson 2</a></li>
+      <li><a href="lesson81/index.html">Lesson 8-1</a></li>
+      <li><a href="lesson82/index.html">Lesson 8-2</a></li>
+      <li><a href="lesson91/index.html">Lesson 9-1</a></li>
       <!-- etc. -->
     </ul>
   </div>
