--- a/lessons/lesson82/index.html
+++ b/lessons/lesson82/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Lesson 1</title>
+  <title>Lesson 8-2</title>
   <style>
     /* Make sure the html and body take up the full height of the window */
     html, body {
